<resources>
    <string name="app_name">Carpooling</string>
    <string name="carpooling">Carpooling</string>
    <string name="mis_amigos">Mis amigos</string>
    <string name="alejandra">Alejandra</string>
    <string name="ram_n">Ramón</string>
    <string name="juan_carlos">Juan Carlos</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="title_activity_login">activity_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener más de 10 caracteres</string>
    <string name="login_failed">Acceso denegado</string>
    <string name="email">Email</string>
    <string name="emailhint">matricula@tec.mx</string>
    <string name="contraseñahint">*********</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="iniciar_sesi_n1">Iniciar sesión</string>
</resources>